Add contribution section in FAQ.

--- a/src/faq.html
+++ b/src/faq.html
@@ -15,6 +15,22 @@
 
   <article>
     <header>
+      <h1>Contribution</h1>
+    </header>
+    <dl>
+      <dt>Where is the form to send my favorite loli cry?</dt>
+      <dd>There isn't, but you can contact us through IRC (see page footer) and
+          we can then agree with various ways to share files.</dd>
+      <dt>Why don't you just add a ☠ form?</dt>
+      <dd>We hate all web-related development and actually already failed to do that.</dd>
+      <dd>Also, after one year, no one ever tried to make a single cry, so we just don't care.</dd>
+      <dd>And finally, we just don't want to have complicated setup on server-side. Let's
+          <a href="https://en.wikipedia.org/wiki/KISS_principle">KISS</a>.</dd>
+    </dl>
+  </article>
+
+  <article>
+    <header>
       <h1>Image &amp; sound stuff</h1>
     </header>
     <dl>
