faq: add public repository section.

--- a/src/faq.html
+++ b/src/faq.html
@@ -27,6 +27,12 @@
       <dd>Also, after one year, no one ever tried to make a single cry, so we just don't care.</dd>
       <dd>And finally, we just don't want to have complicated setup on server-side. Let's
           <a href="https://en.wikipedia.org/wiki/KISS_principle">KISS</a>.</dd>
+
+      <dt>You guys are awesome, I want to help you the hard way</dt>
+      <dd>Then you can start by cloning the
+          <a href="https://github.com/ubitux/lolicri.es">public repository on
+          github</a>, hack it like a boss (loli add/edit, CSS improvements, …),
+          commit your awesome stuff and request a merge.</dd>
     </dl>
   </article>
 
